# CMYK-GraySpot-Detection

./: .dockerignore  .gitignore  Dockerfile  GUI_QUICKSTART.md  LICENSE  README.md  build_gui_executable.py  docker-build.sh  docker-compose.yml  docker-run-gui.sh  labels.csv  priority_review_samples.csv  pytest.ini  requirements.txt  tsne_review.py
.github/: dependabot.yml  release-notes.md
.github/workflows/: ci.yml
data/: images.zip.dvc
data_set/models/: phase2_history_C.csv  phase2_history_K.csv  phase2_history_M.csv  phase2_history_Y.csv
doc/: ADR_Design_Doc_Chain.md  ADR_Encoder_Scaler.md  ADR_ImageNet_Normalization.md  ADR_Model_Select.md  BDD.md  CI_Setup.md  Client_Q.md  Contract.md  Data_Audit.md  Markdown_guide.md  S1_review.md  S3_review.md  SSOT_Artifacts.md  SSOT_Config_Resolution.md  SSOT_Core.md  SSOT_Data_Pipeline.md  SSOT_Evaluation_Reporting.md  SSOT_GlobalVariables.md  SSOT_Model_Architecture.md  SSOT_Training_Pipeline.md  SSOT_Validation_Codes.md  TDD.md
doc/ADR/: ADR_ImageNet_Normalization.md  ADR_Model_Select.md
doc/BDD/: BDD_Channel.md  BDD_Evaluation.md  BDD_GUI.md  BDD_Index.md  BDD_Inference.md  BDD_ONNX.md  BDD_ROI_Pipeline.md  BDD_Safety.md  BDD_SwingFeedback.md  BDD_Training.md  BDD_Tuning.md
doc/Contract/: Contract.md  Contract_artifact_boundary.md  Contract_config_resolution.md  Contract_data_pipeline.md  Contract_evaluation_reporting.md  Contract_fail_fast.md  Contract_gui.md  Contract_index.md  Contract_inference_boundary.md  Contract_model_boundary.md  Contract_roi_pipeline.md  Contract_training_pipeline.md  Contract_tuning_boundary.md
doc/Errors/: Data_Audit.md  validation_report.md
doc/Graph/: Graph_Report.md  graph.json
doc/Guideline/: Data_Relabeling_Strategy.md  augmentation_policy.md
doc/Requirements/: Client_Q.md
doc/SSOT/: SSOT_Artifacts.md  SSOT_Config_Resolution.md  SSOT_Core.md  SSOT_Data_Pipeline.md  SSOT_Evaluation_Reporting.md  SSOT_GUI.md  SSOT_GlobalVariables.md  SSOT_Model_Architecture.md  SSOT_ROI_Pipeline.md  SSOT_Training_Pipeline.md  SSOT_Validation_Codes.md
doc/Settings/: CI_Setup.md
doc/TDD/: TDD_Evaluate_Script.md  TDD_GUI.md  TDD_LabelRefiner.md  TDD_ONNX_Export.md  TDD_ROI_Pipeline.md  TDD_Strategy.md  TDD_SwingEfficiency.md
doc/stage_review/: S3_review.md
doc/test_cycles/: BDD.md  TDD.md
gui/: __init__.py  app.py  i18n.py  main.py  main_window.py
gui/assets/: config.json
gui/components/: __init__.py  chart_builder.py  image_viewer.py  level_accuracy_table.py  log_panel.py  metric_card.py  metrics_display.py  plotly_widget.py  progress_panel.py  training_chart.py
gui/pages/: 01_Dashboard.py  02_Inference.py  03_Model_Info.py  04_Configuration.py
gui/services/: __init__.py  embedding_service.py  evaluation_service.py  training_service.py  tuning_service.py
gui/styles/: dark_theme.qss  light_theme.qss
gui/tabs/: __init__.py  base_tab.py  tab_data.py  tab_embedding.py  tab_evaluation.py  tab_inference.py  tab_optuna.py  tab_settings.py  tab_training.py
gui/tests/: test_gui_contracts.py
gui/workers/: __init__.py  _ckpt_utils.py  base_worker.py  batch_inference_worker.py  embedding_worker.py  evaluation_worker.py  gradcam_worker.py  inference_worker.py  training_worker.py  tuning_worker.py
gui_for_user/: __init__.py  app_window.py  i18n.py  inference_view.py  main.py  sidebar.py
gui_for_user/assets/: config.json
outputs/checkpoints/: phase0_history_C.csv  phase0_history_K.csv  phase0_history_M.csv  phase0_history_Y.csv  phase0_summary.json  phase2_history_C.csv  phase2_history_K.csv  phase2_history_M.csv  phase2_history_Y.csv  phase2_summary_v1.json
outputs/optuna/: best_params_phase2_c.json  best_params_phase2_k.json  best_params_phase2_m.json  best_params_phase2_y.json  trials_summary_phase2_c.json  trials_summary_phase2_k.json  trials_summary_phase2_m.json  trials_summary_phase2_y.json
outputs/reports/: baseline.html  cm_C.html  cm_K.html  cm_M.html  cm_Y.html  cm_overall.html  confidence_distribution.html  eval_dashboard.html  evaluation_results.csv  evaluation_results_C.csv  evaluation_results_K.csv  evaluation_results_M.csv  evaluation_results_Y.csv  evaluation_results_baseline.csv  evaluation_results_phase2_v1.csv  mae_heatmap.html  metrics_summary.json  metrics_summary_C.json  metrics_summary_K.json  metrics_summary_M.json  metrics_summary_Y.json  metrics_summary_baseline.json  metrics_summary_phase2_v1.json  misclassified_C.csv  misclassified_K.csv  misclassified_M.csv  misclassified_Y.csv  misclassified_baseline.csv  misclassified_phase2_v1.csv  misclassified_samples.csv  misclassified_scatter.html  optuna_phase2_report.html  per_class_metrics.html  phase0.html  phase2_v1.html  report_C.json  report_K.json  report_M.json  report_Y.json
src/: __init__.py
src/config/: README.md  __init__.py  config.json  config.yaml  config_manager.py  dependencies.json  pyproject.toml
src/data/: __init__.py  augmentation.py  dataloader.py  dataset.py  label_refiner.py  normalize.py  preprocessing.py  roi_extractor.py
src/evaluation/: __init__.py  confusion.py  evaluator.py  evaluator_charts.py  evaluator_export.py  evaluator_inference.py  evaluator_metrics.py  metrics.py  swing_efficiency.py
src/inference/: __init__.py  model_converter.py  onnx_export.py  predictor.py  predictor_device.py  predictor_inference.py  predictor_loader.py
src/models/: __init__.py  backbone.py  classifier.py  grayspot_model.py  projection_head.py
src/notebooks/: 01_preprocessing.ipynb  02_model_test.ipynb  03_training.ipynb  04_evaluation.ipynb  05_contrastive.ipynb  06_embedding_viz.ipynb
src/reporting/: __init__.py  html_report.py  plots.py
src/scripts/: __init__.py  augment_dataset.py  download_dataset.py  evaluate.py  example_config_logger_usage.py  generate_baseline_report.py  generate_optuna_report.py  generate_phase0_report.py  generate_phase2_report.py  generate_synthetic.py  predict.py  prepare_dataset.py  prepare_holdout.py  run_baseline.py  run_evaluate.py  run_optuna.py  run_phase0.py  run_phase2.py  setup_storage.py  train.py  tsne_review.py
src/tests/: test_optuna.py  (+7 more)
(+49 files in other folders)
