[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "grayspot"
version = "0.1.0"
description = "CMYK Grayspot defect classification pipeline"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "efficientnet-pytorch>=0.7.1",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "albumentations>=1.3.0",
    "PyYAML>=6.0",
    "optuna>=3.4.0",
    "plotly>=5.17.0",
    "jinja2>=3.1.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
    "umap-learn>=0.5.4",
    "PyQt6>=6.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=grayspot --cov-report=html"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
```

---
